@@ -1,7 +1,7 @@
 @echo off
 
 REM
-REM  Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
+REM  Copyright (c) 1997, 2021 Oracle and/or its affiliates. All rights reserved.
 REM
 REM  This program and the accompanying materials are made available under the
 REM  terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -25,7 +25,7 @@ echo JAXB_HOME must be set before running this script
 goto END
 
 :SETCLASSPATH
-set JAXB_PATH=%JAXB_HOME%/mod/jakarta.xml.bind-api.jar;%JAXB_HOME%/mod/jaxb-jxc.jar;%JAXB_HOME%/mod/jaxb-xjc.jar;%JAXB_HOME%/mod/jaxb-impl.jar;%JAXB_HOME%/mod/jaxb-core.jar;%JAXB_HOME%/mod/jakarta.activation.jar
+set JAXB_PATH=%JAXB_HOME%/mod/jakarta.xml.bind-api.jar;%JAXB_HOME%/mod/jaxb-jxc.jar;%JAXB_HOME%/mod/jaxb-xjc.jar;%JAXB_HOME%/mod/jaxb-impl.jar;%JAXB_HOME%/mod/jaxb-core.jar;%JAXB_HOME%/mod/jakarta.activation-api.jar
 
 if "%CLASSPATH%" == "" goto NOUSERCLASSPATH
 set LOCALCLASSPATH=%JAXB_PATH%;%CLASSPATH%
@@ -87,7 +87,7 @@ goto END
 
 :JDK11_OR_GREATER
 rem module path only
-%JAVA% %SCHEMAGEN_OPTS% --module-path %LOCALCLASSPATH% -m com.sun.tools.jxc %*
+%JAVA% %SCHEMAGEN_OPTS% --module-path %LOCALCLASSPATH% --add-modules com.sun.xml.bind -m com.sun.tools.jxc %*
 goto END
 
 :END
